fixing contrast on the timeline dialog.

--- a/public/stylesheets/ui/timeline.css
+++ b/public/stylesheets/ui/timeline.css
@@ -16,7 +16,7 @@
   }
   #timeline_dialog .tickLabel {
     font-size: 11px;
-    color: #777;
+    color: #ccc;
   }
   #timeline_dialog .zoom_out {
     width: 80px;
